...
    }
}

@Composable
private fun FullscreenClose(onEvent: (MapsEvent) -> Unit) {
    ZIconButton(R.drawable.ic_x, stringResource(R.string.maps_close),
        { onEvent(MapsEvent.Fullscreen(false)) }, "Maps.Close")
}

